--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
       <base target="_top">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-      
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       <?!= include('Style'); ?>
@@ -217,17 +217,17 @@
 
           <div class="card" style="flex: 2;">
             <h4>Draft Transaksi (Buffer)</h4>
-            <table class="table" id="bufferTable">
-              <thead>
-                <tr>
-                  <th>Tipe</th>
-                  <th>Ket</th>
-                  <th>Nominal</th>
-                  <th>Aksi</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
+              <table class="table" id="bufferTable">
+                <thead>
+                  <tr>
+                    <th style="width: 5%;"></th> <th>Tipe</th>
+                    <th>Ket</th>
+                    <th>Nominal</th>
+                    <th>Aksi</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
             
             <div class="buffer-footer">
               <div>Total: <span id="bufferTotal">Rp 0</span></div>
