--- a/Style.html
+++ b/Style.html
@@ -1010,11 +1010,12 @@ button {
   background-color: #e67e22 !important;
 }
 
-/* 7. Scroll Area dikasi batas agar tidak memanjang ke bawah */
+/* --- UPDATE TINGGI TABEL MODAL --- */
 .modal .table-responsive {
-  max-height: 400px !important; /* Batas tinggi tabel */
-  overflow-y: auto;
+  max-height: 250px !important; /* SEBELUMNYA 400px, KITA KECILKAN JADI 250px */
+  overflow-y: auto;             /* Agar tetap bisa discroll */
   border: 1px solid #eee;
+  margin-bottom: 10px;          /* Jarak sedikit ke tombol bawah */
 }
 
 /* --- Tambahkan di file Style.html --- */
