--- a/Index.html
+++ b/Index.html
@@ -266,7 +266,7 @@
                 </select>
                 
                 <select id="reportPreset" onchange="applyReportPreset(this.value)">
-                  <option value="">- Filter Waktu -</option>
+                  <option value="">Filter Cepat</option>
                   <option value="today">Hari Ini</option>
                   <option value="yesterday">Kemarin</option>
                   <option value="last7">7 Hari Terakhir</option>
@@ -297,6 +297,16 @@
                 </div>
 
               </div>
+          </div>
+          <div style="display:flex; justify-content:flex-start; margin-bottom:15px;">
+            <div class="trx-tabs" style="width: 300px;">
+              <div id="tabRepDaily" class="tab-item active-masuk" onclick="setReportMode('daily')">
+                  <i class="fas fa-calendar-day"></i> Per Hari
+              </div>
+              <div id="tabRepAccum" class="tab-item" onclick="setReportMode('accumulated')">
+                  <i class="fas fa-layer-group"></i> Akumulasi
+              </div>
+            </div>
           </div>
           <div class="table-responsive">
             <table class="table" id="reportTable">
